--- a/style.css
+++ b/style.css
@@ -532,7 +532,7 @@ section ul li.active{
 }
 
 
-whatsapp for desktop 
+/* whatsapp for desktop 
  .whatsapp_float {
 	position:fixed;
 	width:60px;
@@ -555,9 +555,9 @@ whatsapp for desktop
 .whatsapp_float:hover{
     background-color: #DC143C;
     transition: 0.5s ease;
-}
+} */
 /* for mobile */
-@media screen and (max-width: 767px){
+/* @media screen and (max-width: 767px){
      .whatsapp-icon {
 	 margin-top:10px;
      }
@@ -568,7 +568,7 @@ whatsapp for desktop
         left: 10px;
         font-size: 22px;
     }
-}
+} */
 
 
 
